<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signLabel"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/signLabel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/toButton"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/zodiacDatePickerView"
        android:layout_width="wrap_content"
        android:layout_height="314dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourSignIsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/zodiacIsThis"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toButton" />

    <Button
        android:id="@+id/returnButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:gravity="center_horizontal|start"
        android:text="@string/returnButton"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/signLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestSignsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/bestSignsLabel"
        android:textColor="@android:color/holo_red_light"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/zodiacDatePickerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourSignIsLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/toButton"
        android:layout_width="20dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:text="@string/toButton"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9656248427916586~9936868228"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>